--- a/cover.css
+++ b/cover.css
@@ -10,7 +10,7 @@
 .main-container{
     background-color: #000000;
     width: 100%;
-    padding: 3%;
+    padding: 7% 0 0 5%;
     padding-bottom: 10px;
     display: flex;
     flex-direction: row;
@@ -46,6 +46,24 @@
     font-weight: 600;
     font-size: 40px;
     color: #ffffff;
+}
+.comment{
+    background-image: url(images/Combined\ Shape.png);
+    background-repeat: no-repeat;
+    background-position: top left;
+    margin-left: -70px;
+    margin-top: -70px;
+    width: 220px;
+    height: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.comment h1{
+    font-family: 'DM Sans', sans-serif;
+    color:#ffffff ;
+    font-weight: 500;
+    font-size: 47.61px;
 }
 .design{
     width: 903.51px;
